<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JatxMusic Transmitter</string>
	<string name="title_tag_editor">Tag Editor</string>
    
    <string name="string_add">Add</string>
    <string name="string_add_track">Add Track</string>
    <string name="string_add_folder">Add Folder</string>
	<string name="string_remove">Remove</string>
	<string name="string_remove_track">Remove Track</string>
	<string name="string_remove_all">Remove All</string>
	<string name="string_playlist">Playlist</string>
	<string name="string_export_m3u8">Export M3U8</string>
	<string name="string_import_m3u8">Import M3U8</string>
	
	<string name="question_remove_track">Remove This Track?</string>
	<string name="question_remove_all">Remove All Tracks?</string>
	
	<string name="dialog_track_title">Choose Action</string>
	<string name="button_remove_this_track">Remove This Track</string>
	<string name="button_open_tag_editor">Open Tag Editor</string>
	<string name="button_cancel">Cancel</string>
	
	<string name="yes">Yes</string>
	<string name="no">No</string>
	
	<string name="toast_m3u8_ext">Playlist file must have m3u8 extension</string>
	<string name="toast_long_tap">Make long tap on track to remove</string>
	
	<string name="editor_file">File:</string>
	<string name="editor_title">Title:</string>
	<string name="editor_album">Album:</string>
	<string name="editor_artist">Artist:</string>
	<string name="editor_number">Number:</string>
	<string name="editor_year">Year:</string>
	<string name="editor_save">Save</string>
	
	<string name="item_review_app">Review App</string>
	<string name="item_receiver_android">Receiver for Android</string>
	<string name="item_javafx_version">Version for JavaFX</string>
	<string name="item_receiver_javafx">Receiver for JavaFX</string>
	<string name="item_transmitter_javafx">Transmitter for JavaFX</string>
	<string name="item_source_code">Source Code</string>
	<string name="item_dev_site">Developer Site</string>
</resources>
